--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -165,6 +165,25 @@ header{
 
 #map{height: calc(100% - 60px);}
 
+#station{
+	display: none;
+	position: fixed;
+	height: 50%;
+	width: 50%;
+	left: 25%;
+	top: 25%;
+	background-color: #fff;
+	overflow: scroll;
+}
+.stationBanner{
+	width: 100%;
+	height: 36px;
+	text-align: center;
+	padding-top: 10px;
+}
+
+.show{display: block;}
+
 /*---------------------ANIMATIONS----------------------*/
 
 /*Make the geolocation marker jump*/
