--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,4 +1,3 @@
-
 *{
 	padding: 0;
 	margin: 0;
@@ -52,7 +51,8 @@ header{
 	z-index: -100;
 	height:100%;
 	width:100%;
-	background: url('../img/bg_1.jpg') no-repeat center center fixed;
+	background: url('../img/test_bg.jpg') no-repeat center center fixed;
+	/*background: url('../img/bg_1.jpg') no-repeat center center fixed;*/
 	/*background: url(../img/bg.png) no-repeat center center fixed;*/
 	  -webkit-background-size: cover;
 	  -moz-background-size: cover;
